# TurboFiles

./: .editorconfig  .env.example  .eslintrc.cjs  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HOWTO.md  LICENSE  README.md  SECURITY.md  cliff.toml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml  security.yml
docker/: .dockerignore  Dockerfile  README.md  docker-compose.test.yml
docs/: ACCEPTANCE_TESTS.md  API.md  ARCHITECTURE.md  DEVELOPMENT.md  FEATURE_PARITY.md  FILEZILLA_PARITY_CHECKLIST.md  INSTALL.md  PERMISSIONS.md  PLUGINS_AND_SKILLS.md  ROADMAP.md  SPEC.md
docs/adr/: 0001-tech-stack.md
scripts/: bump-version.sh  check-style.py  collect-bundles.sh  gen_icon.py  publish-github.sh
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs  state.rs  util.rs
src-tauri/src-tauri/icons/: icon.icns
src-tauri/src/commands/: agent.rs  connection.rs  fs_local.rs  history.rs  mod.rs  sites.rs  transfer.rs  update.rs
src-tauri/src/protocols/: ftp.rs  ftps.rs  mod.rs  proxy.rs  sftp.rs  traits.rs
src-tauri/src/storage/: db.rs  history.rs  keychain.rs  mod.rs
src-tauri/src/transfer/: mod.rs  pool.rs  scheduler.rs  worker.rs
src-tauri/tests/: integration.rs
src/components/: AlreadyEditingDialog.tsx  AssistantPanel.tsx  BrandMark.tsx  CertTrustDialog.tsx  ConnectionBar.tsx  FileBrowser.tsx  GlobalPanels.tsx  LogsPanel.tsx  Onboarding.tsx  OverwriteDialog.tsx  PasswordPromptDialog.tsx  SettingsModal.tsx  Sidebar.tsx  ThemeToggle.tsx  TransferQueue.tsx
src/components/ui/: Button.tsx  Input.tsx
src/lib/: agent.ts  api.ts  appInfo.ts  demo.ts  filezillaImport.ts  i18n.ts  theme.tsx  types.ts  utils.ts
src/store/: useChats.ts  useSettings.ts  useStore.ts
tests/unit/: agent.test.ts  filezillaImport.test.ts  i18n.test.ts  theme.test.tsx  transferQueue.test.tsx  utils.test.ts
website/: README.md  index.html  llms.txt  main.js  robots.txt  sitemap.xml  styles.css
